# cyton-solver

./: .gitignore  README.md
.github/workflows/: artifact.yml  backend.yml  build.yml  check.yml  frontend.yml
backend/: MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
backend/.github/workflows/: check.yml
backend/api/: api.py
backend/api/endpoints/: root.py
backend/api/support/: check_status.py  default_parameters.py  default_settings.py  extrapolate.py  logger.py  start_fit.py  upload.py
backend/core/: cyton2.py  file_reader.py  model_fitting.py  settings.py  utils.py
backend/cyton/: main.py
backend/cyton/api/: api.py  app.py  main.py  types.py
backend/cyton/api/endpoints/: root.py
backend/cyton/api/support/: background_fit.py  check_status.py  default_settings.py  extrapolate.py  logger.py  start_fit.py  upload.py
backend/cyton/core/: cyton2.py  data_manager.py  extrapolate.py  file_reader.py  model.pyi  model.pyx  model_fitting.py  models.py  settings.py  types.py  utils.py
backend/cyton/core/core/: model_fitting.py  settings.py
backend/test/: conftest.py  test_api.py  test_round_trip.py  test_utils.py
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json
frontend/src/: App.jsx  utils.ts
frontend/src/client/: CytonClient.ts  index.ts
frontend/src/client/models/: Body_extrapolate_api_extrapolate_post.ts  Body_extrapolate_extrapolate_post.ts  Body_start_fit_api_start_fit_post.ts  Body_start_fit_start_fit_post.ts  Body_upload_api_upload_post.ts  Body_upload_upload_post.ts  Bounds.ts  (+58 more)
frontend/src/themes/: defaultTheme.js
(+20 files in other folders)
