[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cyton"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    'fastapi ~= 0.105.0',
    'uvicorn ~= 0.24.0',
    'python-multipart ~= 0.0.6',
    'openpyxl ~= 3.1.2',
    'scipy ~= 1.11.4',
    'Cython ~= 3.0.8',
    'lmfit ~= 1.2.2',
    'tqdm ~= 4.66.1',
    'pandas ~= 2.1.3'
]
