[build-system]
requires = ["setuptools", "setuptools-scm", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "cyton"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    'fastapi ~= 0.105.0',
    'python-multipart ~= 0.0.6',
    'openpyxl ~= 3.1.2',
    'scipy ~= 1.11.4',
    'Cython ~= 3.0.8',
    'lmfit ~= 1.2.2',
    'tqdm ~= 4.66.1',
    'pandas ~= 2.1.3',
    "pydantic_numpy ~= 4.2.0"
]

[project.optional-dependencies]
dev = ["pytest"]
server = ["uvicorn"]

[project.scripts]
cyton-server = "cyton.api.main:main"

[tool.setuptools.package-data]
"cyton.api" = ["static/**"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryComparison = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
reportWildcardImportFromLibrary = false
exclude = [
    # Ignore the compiled cython
    "build"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
